test_src/compiler_errors/types/arithmetic/NegateBoolError.b
class NegateBoolError {
    void test() {
        println(-true);
    }
}
